--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -79,6 +79,8 @@ jobs:
       - name: key generation
         run:  ssh-keygen -t rsa -N '' -f .ssh/id_rsa <<< y
       - name: ssh-keyscan
-        run:  ssh-keyscan -t rsa 158.227.108.220 >> .ssh/known_hosts
-      - name: scp try
-        run: scp README.test iker@158.227.108.220:/home/iker
+        run:ssh-keyscan -t rsa 158.227.108.220 >> .ssh/known_hosts
+      - name: id_rsa.pub
+        run: cat .ssh/id_rsa.pub
+          #      - name: scp try
+          #        run: scp README.test iker@158.227.108.220:/home/iker
